// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelButton /> should render when [channel="beta"] 1`] = `
<Radio
  checked={true}
  label="Beta"
  onClick={[Function]}
/>
`;

exports[`<ChannelButton /> should render when [channel="stable"] 1`] = `
<Radio
  checked={true}
  label="Stable (recommended)"
  onClick={[Function]}
/>
`;

exports[`<SoftwareChannels /> should render when [channel="alpha"] 1`] = `
<Box>
  <label>
    Software Channel
  </label>
  <ChannelButton
    channel="stable"
    checked={false}
    key="stable"
    onClick={[MockFunction]}
  />
  <ChannelButton
    channel="beta"
    checked={false}
    key="beta"
    onClick={[MockFunction]}
  />
  <ChannelButton
    channel="alpha"
    checked={true}
    key="alpha"
    onClick={[MockFunction]}
  />
</Box>
`;

exports[`<SoftwareChannels /> should render when [channel="beta"] 1`] = `
<Box>
  <label>
    Software Channel
  </label>
  <ChannelButton
    channel="stable"
    checked={false}
    key="stable"
    onClick={[MockFunction]}
  />
  <ChannelButton
    channel="beta"
    checked={true}
    key="beta"
    onClick={[MockFunction]}
  />
  <ChannelButton
    channel="alpha"
    checked={false}
    key="alpha"
    onClick={[MockFunction]}
  />
</Box>
`;

exports[`<SoftwareChannels /> should render when [channel="stable"] 1`] = `
<Box>
  <label>
    Software Channel
  </label>
  <ChannelButton
    channel="stable"
    checked={true}
    key="stable"
    onClick={[MockFunction]}
  />
  <ChannelButton
    channel="beta"
    checked={false}
    key="beta"
    onClick={[MockFunction]}
  />
  <ChannelButton
    channel="alpha"
    checked={false}
    key="alpha"
    onClick={[MockFunction]}
  />
</Box>
`;
